CodeBlock theme fixes, anchor styles, real landing page, more.
* Update 'data-theme-mode' for Pygment's sake
* Fix Pygments-themeing for "system-default" theme
* Tweak some too-low-contrast theme colours
* Add style for anchors (finally)
* Separate 'colour fade when code too long' gradients for light/dark
* Bigger rounding on CodeBlock, fix for shadow-on-rounded-corner glitch
* Fix debug_shell's return type
* Take out that shitty old LandingPageView reference in urls

--- a/src/pygments.sass
+++ b/src/pygments.sass
@@ -1,7 +1,7 @@
 // Styles from https://pygments.org/styles/
 
 // Taken from 'lightbulb'
-[data-theme="ad"], [data-theme="system-default"][data-theme-dark="false"]
+[data-theme-mode="dark"]
   div.pygments
     pre
       line-height: 125%
@@ -31,7 +31,7 @@
     .hll
       background-color: #6e7681
     .c
-      color: #7e8aa1
+      color: #8796af
     .err
       color: #f88f7f
     .esc
@@ -54,16 +54,16 @@
       color: #f88f7f
       font-style: italic
     .cm
-      color: #7e8aa1
+      color: #8796af
     .cp
       color: #FFAD66
       font-weight: bold
     .cpf
-      color: #7e8aa1
+      color: #8796af
     .c1
-      color: #7e8aa1
+      color: #8796af
     .cs
-      color: #7e8aa1
+      color: #8796af
       font-style: italic
     .gd
       color: #f88f7f
@@ -81,7 +81,7 @@
       color: #6ad4af
       background-color: #19362c
     .go
-      color: #7e8aa1
+      color: #8796af
     .gp
       color: #d4d2c8
     .gs
@@ -118,7 +118,7 @@
     .no
       color: #FFD173
     .nd
-      color: #7e8aa1
+      color: #8796af
       font-weight: bold
       font-style: italic
     .ni
@@ -164,7 +164,7 @@
     .dl
       color: #D5FF80
     .sd
-      color: #7e8aa1
+      color: #8796af
     .s2
       color: #D5FF80
     .se
@@ -198,7 +198,7 @@
 
 
 // Taken from 'lovelace' (because I couldn't resist…)
-[data-theme="fl"], [data-theme="system-default"][data-theme-dark="false"]
+[data-theme-mode="light"]
   div.pygments
     pre
       line-height: 125%
@@ -228,7 +228,7 @@
     .hll
       background-color: #ffffcc
     .c
-      color: #888888
+      color: #565656
       font-style: italic
     .err
       background-color: #a848a8
@@ -237,23 +237,23 @@
     .o
       color: #666666
     .p
-      color: #888888
+      color: #565656
     .ch
       color: #287088
       font-style: italic
     .cm
-      color: #888888
+      color: #565656
       font-style: italic
     .cp
       color: #289870
     .cpf
-      color: #888888
+      color: #565656
       font-style: italic
     .c1
-      color: #888888
+      color: #565656
       font-style: italic
     .cs
-      color: #888888
+      color: #565656
       font-style: italic
     .gd
       color: #c02828
@@ -269,17 +269,17 @@
     .gi
       color: #388038
     .go
-      color: #666666
+      color: #555555
     .gp
-      color: #444444
+      color: #333333
     .gs
       font-weight: bold
     .gu
-      color: #444444
+      color: #333333
     .gt
       color: #2838b0
     .kc
-      color: #444444
+      color: #333333
       font-style: italic
     .kd
       color: #2838b0
@@ -294,7 +294,7 @@
       color: #2838b0
       font-style: italic
     .m
-      color: #444444
+      color: #333333
     .s
       color: #b83838
     .na
@@ -324,7 +324,7 @@
     .ow
       color: #a848a8
     .pm
-      color: #888888
+      color: #555555
     .w
       color: #a89028
     .mb
